@@ -254,8 +254,6 @@
             <configuration>
                 <suiteXmlFiles>
                     <suiteXmlFile>${SuiteXmlFile}</suiteXmlFile>
-<!--                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
-                    <forkCount>0</forkCount>
                 </suiteXmlFiles>
             </configuration>
         </plugin>
